[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/PhoneInt.gd" type="Script" id=1]
[ext_resource path="res://Assets/Items/phone.png" type="Texture" id=2]
[ext_resource path="res://Assets/Items/close.png" type="Texture" id=3]
[ext_resource path="res://Assets/Items/close_hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/fonts/CompassPro.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 5 )

[node name="Phone" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -6.0
margin_right = 646.0
margin_bottom = 375.0
color = Color( 0, 0, 0, 0.627451 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 321, 166 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="OptionButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 278.0
margin_right = 409.0
margin_bottom = 324.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.345098, 0.823529, 0.0980392, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Ativar Silencioso"
flat = true

[node name="CloseScene" type="TextureButton" parent="."]
margin_left = 588.0
margin_top = 38.0
margin_right = 613.0
margin_bottom = 67.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[connection signal="pressed" from="OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="CloseScene" to="." method="_on_CloseScene_pressed"]
